unbolded title text, increase smaller text margin

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
 <div class="containter2">
   <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;" className="poppins-regular">
-    <h6 class="poppins-regular" style="font-size: 77px; font-weight: 600;">Turn Your</h6> 
+    <h6 class="poppins-regular" style="font-size: 77px; font-weight: 400;">Turn Your</h6> 
     <img src="assets/webstuff/nlogo.png" style="width: 291px; height: 173px" alt="Logo" />
  </div>
- <h2 style="text-align: center; font-size: 77px; margin-top: -60px;"class="poppins-regular text-center text-[77px] mt-[-60px]">Dream Into Reality</h2>
+ <h2 style="text-align: center; font-size: 77px; margin-top: -60px; font-weight: 400;"class="poppins-regular text-center text-[77px] mt-[-60px]">Dream Into Reality</h2>
 
- <p style="display: flex; justify-content: center; text-align: center; font-size: 19px; padding-inline: 350px; margin-top: 10px;" class="flex justify-center text-center text-[19px] px-[350px] mt-[10px] poppins-regular">Effortlessly dive in advanced fields of STEM. Pandorax provides a disproportionate advantage for winning prestigious Olympiads and science fairs.</p>
+ <p style="display: flex; justify-content: center; text-align: center; font-size: 19px; padding-inline: 350px; margin-top: 20px;" class="flex justify-center text-center text-[19px] px-[350px] mt-[10px] poppins-regular">Effortlessly dive in advanced fields of STEM. Pandorax provides a disproportionate advantage for winning prestigious Olympiads and science fairs.</p>
 
  <div style="display: flex; justify-content: center; text-align: center; align-items: center; margin-top: 50px;" class="flex justify-center text-center items-center space-x-4 mt-[50px]">
   <a href="projects.html"><button id="grad" style="border-width: 1px; border-color: #ea16ea; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; color: white; cursor: pointer;">Get Started</button></a>
