add static landing bg image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   
 </head>
 <body>
+  <div id="home-background"></div>
   <header>
     <div class="head" style="padding-bottom: 2vh">
       <div><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /> </div>
