--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
  <div style="display: flex; justify-content: center; text-align: center; align-items: center; margin-top: 50px;" class="flex justify-center text-center items-center space-x-4 mt-[50px]">
   <a href="projects.html"><button id="grad" style="border-width: 1px; border-color: #ea16ea; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; color: white; cursor: pointer;">Get Started</button></a>
-  <a href="team.html"><button style="border-width: 1px; border-color: #ea16ea; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; background-color: transparent; color: white; cursor: pointer;">Learn More</button></a>
+  <a href="team.html"><button style="border-width: 1px; border-color: black; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; background-color: transparent; color: black; cursor: pointer;">Learn More</button></a>
  </div>
 
 
