updating website for fall camps

--- a/team.html
+++ b/team.html
@@ -815,8 +815,9 @@
         <h4>Vincent Huang</h4>
         <p style="margin-bottom: 10px; color: #3d9be9">ML Research Bootcamp</p>
         <ul style="font-size: 90%;">
+          <li>Yale</li>
           <li>ISEF 2nd place in Material Science</li>
-          <li>AIME qualifier</li>
+          <li>Regeneron STS Finalist (Top 40)</li>
         </ul>
       </div>
     </div>
