--- a/usncobootpage.html
+++ b/usncobootpage.html
@@ -26,7 +26,7 @@
     <h1>USNCO Bootcamp</h1>
     
     <section class="description">
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 7/13 - 8/21 every Saturday and Tuesday 8-9 PM EST (classes will be recorded)</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 11/23 - 2/1 every Sunday 5-6 PM EST (classes will be recorded)</p>
         <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: This bootcamp will prepare students for the USNCO open exam, assuming no prior experience with chemistry. This bootcamp will cover the chemistry of reactions, acids and bases, electronic structure, states of matter, thermodynamics, and more. By the end of the bootcamp, students should have enough knowledge to pass the USNCO open and win honors at the national level.</p>
         <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: Basic understanding of algebra; no prior chemistry knowledge required.</p>
     </section>
@@ -39,50 +39,30 @@
 
     <div class="executive"> 
         <div class="profile-card" style="height: 485px">
-          <img src="assets/webstuff/pplimg/phoenix wu.png" alt="David Zhou"/>
+          <img src="assets/webstuff/pplimg/anant asthana.png" alt="David Zhou"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Phoenix Wu</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Anant Asthana</h2>
             <ul>
               <li>MIT</li>
-              <li>2x IChO Medalist, 1x Gold</li>
-              <li>4x USNCO National Finalist</li>
+              <li>IChO Silver Medalist</li>
+              <li>3x USNCO National Finalist</li>
             </ul>
           </div>
         </div>
 
         <div class="profile-card" style="height: 485px">
-          <img src="assets/webstuff/pplimg/jimmy.png"/>
+          <img src="assets/webstuff/pplimg/mingwen.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Jimmy Jiang</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Mingwen Duan</h2>
             <ul>
-              <li>2x USNCO National Finalist</li>
-              <li>National Science Olympiad Top 10</li>
+              <li>MIT</li>
+              <li>IChO Silver Medalist</li>
+              <li>USAMO Bronze Medalist</li>
             </ul>
           </div>
         </div>
 
         <div class="break"></div>
-
-        <div class="profile-card" style="height: 505px">
-          <img src="assets/webstuff/pplimg/jianyu.png"/>
-          <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Jianyu Wang</h2>
-            <ul>
-              <li>USNCO Top 50</li>
-              <li>USABO Semifinalist</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="profile-card" style="height: 505px">
-          <img src="assets/webstuff/pplimg/ben.png"/>
-          <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Ben Bian</h2>
-            <ul>
-              <li>USNCO Top 150</li>
-            </ul>
-          </div>
-        </div>
 
         <div class="profile-card" style="height: 505px">
           <img src="assets/webstuff/pplimg/pfp.png"/>
