sign up button relink

--- a/usncobootpage.html
+++ b/usncobootpage.html
@@ -77,7 +77,7 @@
     </div>
 
     <section class="container">
-      <a href="https://forms.gle/Rf51jsXB263N76jG9"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/wiyfsFztTxFrXx2b8"><button id="bruh">Sign Up</button></a>
     </section>
 
     <section class="copyright">
