--- a/programs.html
+++ b/programs.html
@@ -34,11 +34,11 @@
 
   <section class="title" data-aos="fade-in" data-aos-once="true" data-aos="zoom-in" data-aos-easing="ease-in">
     <p>Registered Students</p>
-    <p>Instructors</p>
+    <p>Countries</p>
   </section>
 
   <section class="stats" data-aos="fade-in" data-aos-once="true" data-aos-delay="150" data-aos="zoom-in" data-aos-easing="ease-in">
-    <p>600+</p>
+    <p>900+</p>
     <p>20+</p>
   </section>
 
