--- a/usaphobootpage.html
+++ b/usaphobootpage.html
@@ -57,7 +57,7 @@
             <ul>
               <li>MIT</li>
               <li>USAPhO Gold Medalist</li>
-              <li>USAMO Winner (Top 12)</li>
+              <li>USAJMO Winner (Top 12)</li>
               <li>USACO Platinum</li>
             </ul>
           </div>
