--- a/programs.html
+++ b/programs.html
@@ -45,25 +45,25 @@
   <div class="info">
     <section class="naclo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100">
       <h2>NACLO Bootcamp</h2>
-      <p id="idk">Taught by IOL medalists & NACLO winners, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to place in NACLO. <a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
+      <p id="idk">Taught by IOL medalists & NACLO winners, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to place in NACLO. <a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
       <a id="idek" style=" color: #ff7ee3" href="naclobootpage.html"><p style="margin-top: 10px">Learn More </p></a>
     </section> 
 
     <section class="usabo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 >USABO Bootcamp</h2>
-      <p id="idk">Taught by top USA Biolympiad winners and finalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USABO semifinals and win honorable mention.<a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
+      <p id="idk">Taught by top USA Biolympiad winners and finalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USABO semifinals and win honorable mention.<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
       <a id="idek" style=" color:  #ff7ee3" href="usabobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
     <section class="usapho" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 >USAPhO Bootcamp</h2>
-      <p id="idk">Taught by a team of International Physics Olympiad & USAPhO medalists, this 12 week bootcamp is beginner-friendly and covers every topic that shows up on the F=ma exam, helping you qualify for the USAPhO and medal.<a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
+      <p id="idk">Taught by a team of International Physics Olympiad & USAPhO medalists, this 12 week bootcamp is beginner-friendly and covers every topic that shows up on the F=ma exam, helping you qualify for the USAPhO and medal.<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
       <a id="idek" style="  color: #dfb26b " href="usaphobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
     <section class="usnco" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 >USNCO Bootcamp</h2>
-      <p id="idk">Taught by International Chemistry Olympiad medalists & USNCO campers, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USNCO nationals round and win USNCO honors.<a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
+      <p id="idk">Taught by International Chemistry Olympiad medalists & USNCO campers, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USNCO nationals round and win USNCO honors.<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
       <a id="idek" style="  color:  #bada55" href="usncobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
     
@@ -77,6 +77,12 @@
       <h2 >Machine Learning Research Bootcamp</h3>
       <p id="idk">Taught by young scientists whose groundbreaking research in AI and machine learning won Grand Awards at the prestigious Regeneron International Science and Engineering Fair (ISEF), this bootcamp is a valuable opportunity to learn advanced ML that can be applied to produce cutting-edge research innovations.<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
       <a id="idek" style="  color: #70f9f4" href="mlbootpage.html"><p style="margin-top: 10px">Learn More</p></a>
+    </section>
+
+    <section class="usaao" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
+      <h2 >USAAAO Bootcamp</h3>
+      <p id="idk">aiden change here<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
+      <a id="idek" style="  color: #f5366c" href="usaaaobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
     
