--- a/usaaaobootpage.html
+++ b/usaaaobootpage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pandorax</title>
-    <link rel="stylesheet" href="assets/mlboot.css">
+    <link rel="stylesheet" href="assets/usaaoboot.css">
     <link rel="icon" href="assets/webstuff/pandoraxO">
     <style>
       @import url('https://fonts.cdnfonts.com/css/poppins');
@@ -25,9 +25,9 @@
     <h1>USAAAO Bootcamp</h1>
     
     <section class="description">
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 8/15 - 8/29 everyday 7-8 PM EST</p>
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: Machine learning (ML) and AI is a rapidly advancing field of science, but just knowing ML/AI is not enough — you must know how to use it. This bootcamp will teach you the fundamentals of AI as well as advanced ML. You will experience conducting AI/ML research. By the end of the bootcamp, you would have produced a high-end ML model for a research project of your own. With newfound knowledge from this valuable opportunity, you will be equipped with the tools to continue pursuing AI/ML and compete in and win science fairs, such as the prestigious Regeneron ISEF.</p>
-        <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: Python knowledge is not required; however, some programming experience is recommended.</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 7/5 - 8/13 every Sunday and Wednesday 7-8 PM EST (classes will be recorded)</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>:  This bootcamp will prepare students for the USAAAO open exam, the entrance exam to the NAC, assuming no prior experience with astrophysics. This bootcamp will cover basic astronomy and core astrophysics concepts, as well as general techniques to solve difficult and tricky problems. By the end of the bootcamp, students should have enough knowledge to pass the USAAAO open, qualifying for the prestigious NAC exam and potentially earn a medal.</p>
+        <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: Solid understanding of algebra and elementary trigonometry; prior physics and basic calculus knowledge recommended but not necessary.</p>
     </section>
 
 
