--- a/programs.html
+++ b/programs.html
@@ -73,17 +73,19 @@
       <a id="idek" style="  color: #18ecf0" href="usesobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
+    <section class="usaao" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
+      <h2 >USAAAO Bootcamp</h3>
+      <p id="idk">Taught by a team of International Astronomy & Astrophysics Olympiad & USAAAO medalists, this 12 week bootcamp is beginner-friendly and covers every topic that shows up on the USAAAO open exam, helping you qualify for the NAC and medal. <a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
+      <a id="idek" style="  color: #f5366c" href="usaaaobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
+    </section>
+
     <section class="ml" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 >Machine Learning Research Bootcamp</h3>
       <p id="idk">Taught by young scientists whose groundbreaking research in AI and machine learning won Grand Awards at the prestigious Regeneron International Science and Engineering Fair (ISEF), this bootcamp is a valuable opportunity to learn advanced ML that can be applied to produce cutting-edge research innovations.<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
       <a id="idek" style="  color: #70f9f4" href="mlbootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
-    <section class="usaao" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
-      <h2 >USAAAO Bootcamp</h3>
-      <p id="idk">aiden change here<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
-      <a id="idek" style="  color: #f5366c" href="usaaaobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
-    </section>
+    
 
     
   </div>
