--- a/programs.html
+++ b/programs.html
@@ -38,32 +38,32 @@
   </section>
 
   <section class="stats" data-aos="fade-in" data-aos-once="true" data-aos-delay="150" data-aos="zoom-in" data-aos-easing="ease-in">
-    <p>900+</p>
+    <p>1,000+</p>
     <p>20+</p>
   </section>
 
   <div class="info">
     <section class="naclo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100">
       <h2>NACLO Bootcamp</h2>
-      <p id="idk">Taught by IOL medalists & NACLO winners, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to place in NACLO. <a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
+      <p id="idk">Taught by IOL medalists & NACLO winners, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to place in NACLO. <a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
       <a id="idek" style=" color: #ff7ee3" href="naclobootpage.html"><p style="margin-top: 10px">Learn More </p></a>
     </section> 
 
     <section class="usabo" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 >USABO Bootcamp</h2>
-      <p id="idk">Taught by top USA Biolympiad winners and finalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USABO semifinals and win honorable mention.<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
+      <p id="idk">Taught by top USA Biolympiad winners and finalists, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USABO semifinals and win honorable mention.<a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
       <a id="idek" style=" color:  #ff7ee3" href="usabobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
     <section class="usapho" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 >USAPhO Bootcamp</h2>
-      <p id="idk">Taught by a team of International Physics Olympiad & USAPhO medalists, this 12 week bootcamp is beginner-friendly and covers every topic that shows up on the F=ma exam, helping you qualify for the USAPhO and medal.<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
+      <p id="idk">Taught by a team of International Physics Olympiad & USAPhO medalists, this 12 week bootcamp is beginner-friendly and covers every topic that shows up on the F=ma exam, helping you qualify for the USAPhO and medal.<a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
       <a id="idek" style="  color: #dfb26b " href="usaphobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
 
     <section class="usnco" data-aos="fade-left" data-aos-once="true" data-aos-delay="100"> 
       <h2 >USNCO Bootcamp</h2>
-      <p id="idk">Taught by International Chemistry Olympiad medalists & USNCO campers, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USNCO nationals round and win USNCO honors.<a style="text-weight: 2000; font-style: italic"> NOT CURRENTLY IN SESSION</a></p>
+      <p id="idk">Taught by International Chemistry Olympiad medalists & USNCO campers, this 12 week bootcamp is beginner-friendly and teaches the fundamental concepts you need to qualify for the USNCO nationals round and win USNCO honors.<a style="text-weight: 2000; font-style: italic"> CURRENTLY IN SESSION</a></p>
       <a id="idek" style="  color:  #bada55" href="usncobootpage.html"><p style="margin-top: 10px">Learn More</p></a>
     </section>
     
