--- a/naclobootpage.html
+++ b/naclobootpage.html
@@ -80,7 +80,7 @@
     </div>
 
     <section class="container">
-      <a href="https://forms.gle/wiyfsFztTxFrXx2b8"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/AptHjhhJd2asLk8u7"><button id="bruh">Sign Up</button></a>
     </section>
 
     <section class="copyright">
