--- a/usaaaobootpage.html
+++ b/usaaaobootpage.html
@@ -63,11 +63,11 @@
     </div>
 
     <section class="container">
-      <a href="https://forms.gle/kDx1hvMovjz9M5Qy8"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/AptHjhhJd2asLk8u7"><button id="bruh">Sign Up</button></a>
     </section>
 
     <section class="copyright">
-      <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+      <p><span>&#169;</span> 2025 by Pandorax. All Rights Reserved.</p>
     </section>
 
 <script src="assets/script.js"></script>
