--- a/usaphobootpage.html
+++ b/usaphobootpage.html
@@ -79,11 +79,11 @@
     </div>
 
     <section class="container">
-      <a href="https://forms.gle/wiyfsFztTxFrXx2b8"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/AptHjhhJd2asLk8u7"><button id="bruh">Sign Up</button></a>
     </section>
 
     <section class="copyright">
-      <p><span>&#169;</span> 2024 by Pandorax. All Rights Reserved.</p>
+      <p><span>&#169;</span> 2025 by Pandorax. All Rights Reserved.</p>
     </section>
 
 <script src="assets/script.js"></script>
