--- a/usaaaobootpage.html
+++ b/usaaaobootpage.html
@@ -25,7 +25,7 @@
     <h1>USAAAO Bootcamp</h1>
     
     <section class="description">
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 7/5 - 8/13 every Sunday and Wednesday 7-8 PM EST (classes will be recorded)</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 7/5 - 8/13 (classes will be recorded)</p>
         <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>:  This bootcamp will prepare students for the USAAAO open exam, the entrance exam to the NAC, assuming no prior experience with astrophysics. This bootcamp will cover basic astronomy and core astrophysics concepts, as well as general techniques to solve difficult and tricky problems. By the end of the bootcamp, students should have enough knowledge to pass the USAAAO open, qualifying for the prestigious NAC exam and potentially earn a medal.</p>
         <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: Solid understanding of algebra and elementary trigonometry; prior physics and basic calculus knowledge recommended but not necessary.</p>
     </section>
