--- a/usabobootpage.html
+++ b/usabobootpage.html
@@ -26,7 +26,7 @@
     <h1>USABO Bootcamp</h1>
     
     <section class="description">
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 11/23 - 2/1 every Sunday 8-9 PM EST (classes will be recorded)</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 7/5 - 8/13 (classes will be recorded)</p>
         <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: NOTE: this is an advanced USABO bootcamp. This bootcamp will prepare students for the USABO semifinal round, covering 5 important units critical in reaching top 50 and camp: Biochemistry, Cell Biology, Genetics, Plants, and Animal Physiology. By the end of the bootcamp, students should have enough knowledge to reach top 50 or higher at the USABO semifinal round.</p>
         <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: None.</p>
     </section>
