--- a/naclobootpage.html
+++ b/naclobootpage.html
@@ -26,7 +26,7 @@
     <h1>NACLO Bootcamp</h1>
     
     <section class="description">
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 11/23 - 2/1 every Sunday 6:30-7:30 PM EST (classes will be recorded)</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from from 7/5 - 8/13 (classes will be recorded)</p>
         <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: This bootcamp will prepare students for the NACLO open round, assuming no prior experience with linguistics or linguistics olympiads. We will cover fundamental topics in linguistics with a special focus on problem-solving, including Phonology, Syntax, Semantics and Morphology. By the end of the bootcamp, students should have enough knowledge to qualify for the prestigious NACLO Invitationals exam.</p>
         <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: None, although a knack for solving logic puzzles is expected.</p>
     </section>
